# xsum-bart-summarizer

./: .gitignore  AGENTS.md  README.md  app.py  evaluation_report.md  project_overview.md  pyproject.toml
context/: AGENTS.md  project_overview.md
deploy/model/: README.md
scripts/: upload_model.py
src/: eda.py  evaluate_model.py  inference.py  preprocess.py  train.py
