[project]
name = "xsum-bart-summarizer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.13.0",
    "bert-score>=0.3.13",
    "datasets>=4.8.5",
    "evaluate>=0.4.6",
    "gradio>=6.15.0",
    "matplotlib>=3.10.9",
    "rouge-score>=0.1.2",
    "sentencepiece>=0.2.1",
    "torch>=2.12.0",
    "transformers>=5.9.0",
    "wandb>=0.27.0",
]
